Cut out all inplace and SIMD stuff because I'm tired of f'ing around with it.