@@ -106,25 +106,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
-                <configuration>
-                  <!--<release>23</release>-->
+<!--                <configuration>
                   <compilerArgs>
-                    <arg>--add-modules</arg>
+                    <arg>- -add-modules</arg>
                     <arg>jdk.incubator.vector</arg>
                   </compilerArgs>
-                </configuration>
+                </configuration>-->
             </plugin>
-<!--            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <version>3.1.0</version>
-              <configuration>
-                <mainClass>your.main.ClassNameHere</mainClass>
-                <fork>true</fork>
-                <executable>java</executable>
-                <commandlineArgs></commandlineArgs>
-              </configuration>
-            </plugin>            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
